[package]
authors = ["Rustx <gerardo.corsan@gmail.com>"]
edition = "2018"
name = "rustx"
description = "MAL implementation for Rust"
version = "0.1.0"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
rustyline = "9.1.2"

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"